objects/NCS_Data_Entry_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Mental_health_condition__c</fullName>
        <label>Mental health condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Anxiety</fullName>
                </value>
                <value>
                    <fullName>Depression</fullName>
                </value>
                <value>
                    <fullName>Obsessive compulsive disorder (OCD)</fullName>
                </value>
                <value>
                    <fullName>Panic Attacks</fullName>
                </value>
                <value>
                    <fullName>Other mental health condition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Multiple_First_Priority__c</fullName>
        <formula>IF(ISPICKVAL( Skill_choice_Drama__c , &quot;1&quot;), 1, 0) +
IF(ISPICKVAL( Skill_choice_Enterprise__c , &quot;1&quot;), 1, 0)+
IF(ISPICKVAL( Skill_choice_Media__c , &quot;1&quot;), 1, 0)+
IF(ISPICKVAL( Skill_choice_Music__c, &quot;1&quot;), 1, 0)+
IF(ISPICKVAL( Skill_choice_Photography__c, &quot;1&quot;), 1, 0)+
IF(ISPICKVAL( Skill_choice_Sport__c  , &quot;1&quot;), 1, 0)+
IF(ISPICKVAL( Skill_Choice_Art__c  , &quot;1&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiple First Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Second_Priority__c</fullName>
        <formula>IF(ISPICKVAL( Skill_choice_Drama__c , &quot;2&quot;), 1, 0) + 
IF(ISPICKVAL( Skill_choice_Enterprise__c , &quot;2&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Media__c , &quot;2&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Music__c, &quot;2&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Photography__c, &quot;2&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Sport__c , &quot;2&quot;), 1, 0)+
IF(ISPICKVAL( Skill_Choice_Art__c  , &quot;2&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiple Second Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiple_Third_Priority__c</fullName>
        <formula>IF(ISPICKVAL( Skill_choice_Drama__c , &quot;3&quot;), 1, 0) + 
IF(ISPICKVAL( Skill_choice_Enterprise__c , &quot;3&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Media__c , &quot;3&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Music__c, &quot;3&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Photography__c, &quot;3&quot;), 1, 0)+ 
IF(ISPICKVAL( Skill_choice_Sport__c , &quot;3&quot;), 1, 0)+
IF(ISPICKVAL( Skill_Choice_Art__c  , &quot;3&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiple Third Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCST_Notes__c</fullName>
        <label>NCST: Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NCS_Add_New_Notes__c</fullName>
        <label>NCS Add New Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NCS_Campaign_School__c</fullName>
        <label>NCS Campaign School</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_DO_NOT_CONTACT__c</fullName>
        <label>NCS DO NOT CONTACT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Facebook_Id__c</fullName>
        <label>NCS YP Facebook Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Guardian_Facebook_name__c</fullName>
        <label>NCS Guardian Facebook name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Guardian_Twitter_handle__c</fullName>
        <label>NCS Guardian Twitter handle</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_ID__c</fullName>
        <label>NCS ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Lead__c</fullName>
        <label>NCS LeadSource</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>School paper form (Marketing)</fullName>
                </value>
                <value>
                    <fullName>School offline form (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Brought into office by hand (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Received by post (CO)</fullName>
                </value>
                <value>
                    <fullName>Provided over telephone</fullName>
                </value>
                <value>
                    <fullName>Provided over email</fullName>
                </value>
                <value>
                    <fullName>Provided by text message</fullName>
                </value>
                <value>
                    <fullName>Provided through Facebook</fullName>
                </value>
                <value>
                    <fullName>Partner referral</fullName>
                </value>
                <value>
                    <fullName>Staff referral</fullName>
                </value>
                <value>
                    <fullName>Telephone call</fullName>
                </value>
                <value>
                    <fullName>Text message</fullName>
                </value>
                <value>
                    <fullName>Came to an event</fullName>
                </value>
                <value>
                    <fullName>Completed website form</fullName>
                </value>
                <value>
                    <fullName>Contacted us via social media</fullName>
                </value>
                <value>
                    <fullName>Emailed us</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NCS Website Submission</fullName>
                </value>
                <value>
                    <fullName>Radio Ad</fullName>
                </value>
                <value>
                    <fullName>Summer 2012 applicant</fullName>
                </value>
                <value>
                    <fullName>Central web</fullName>
                </value>
                <value>
                    <fullName>Central FB</fullName>
                </value>
                <value>
                    <fullName>CS Upload (Marketing)</fullName>
                </value>
                <value>
                    <fullName>Bucks &amp; Berks handover</fullName>
                </value>
                <value>
                    <fullName>Website - Non-Social Media</fullName>
                </value>
                <value>
                    <fullName>Website - YPOJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NCS_Primary_Season__c</fullName>
        <label>NCS Primary Season</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Region__c</fullName>
        <label>NCS Region</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_YP_Other_Phone__c</fullName>
        <label>NCS YP Other Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCS_Year__c</fullName>
        <label>NCS Year</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEET__c</fullName>
        <label>In employment, education or training?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_times_EOI_Upload__c</fullName>
        <formula>IF(
  ISPICKVAL(Template__c, &quot;EOI&quot;),
 1,
 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of times EOI upload</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_food_allergies__c</fullName>
        <label>Non-food allergies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Hayfever</fullName>
                </value>
                <value>
                    <fullName>Insect bites or stings</fullName>
                </value>
                <value>
                    <fullName>Medicines</fullName>
                </value>
                <value>
                    <fullName>Latex</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_food_allergy_details__c</fullName>
        <label>Non-food allergy details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OBS_MASI_form_status__c</fullName>
        <formula>IF(ISPICKVAL(Template__c, &quot;EOI?&quot;), &quot; &quot;, &quot;Completed&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OBS MASI form status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OBS_PG_completed_MASI__c</fullName>
        <formula>IF(ISPICKVAL(Template__c, &quot;EOI?&quot;),NULL, IF(Agree_to_main_consent__c = FALSE, NULL,  TODAY() ))</formula>
        <label>OBS PG completed MASI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OBS_PG_completed_registration__c</fullName>
        <formula>IF( OR(ISBLANK(Parent_First_Name__c),ISBLANK( Parent_Last_Name__c)) , NULL,  TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OBS PG completed registration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OBS_PG_completed_skills__c</fullName>
        <formula>IF( Multiple_First_Priority__c +  Multiple_Second_Priority__c +  Multiple_Third_Priority__c &lt; 3, NULL,  TODAY() )</formula>
        <label>OBS PG completed skills</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opt_out_of_Telephone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of Telephone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_out_of_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt out of Email/SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opt_out_phone_email_sms__c</fullName>
        <formula>IF(
AND(Opt_out_of_Telephone__c = true ,Opt_out_of_email__c = true),
&quot;No telephone marketing;No email marketing;No SMS marketing&quot;,
IF(Opt_out_of_Telephone__c = true ,&quot;No telephone marketing&quot;,
IF(Opt_out_of_email__c = true,&quot;No email marketing;No SMS marketing&quot;,
NULL)))</formula>
        <label>Opt out phone/email/sms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_learning_difficulties__c</fullName>
        <label>Other learning difficulties</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ADD</fullName>
                </value>
                <value>
                    <fullName>ADHD</fullName>
                </value>
                <value>
                    <fullName>Autism</fullName>
                </value>
                <value>
                    <fullName>Asperger syndrome</fullName>
                </value>
                <value>
                    <fullName>Developmental delay</fullName>
                </value>
                <value>
                    <fullName>Dyslexia</fullName>
                </value>
                <value>
                    <fullName>Dyspraxia</fullName>
                </value>
                <value>
                    <fullName>Down&apos;s Syndrome</fullName>
                </value>
                <value>
                    <fullName>Hyperactivity</fullName>
                </value>
                <value>
                    <fullName>SEN</fullName>
                </value>
                <value>
                    <fullName>Speech and Language Difficulties</fullName>
                </value>
                <value>
                    <fullName>Support provided by their school</fullName>
                </value>
                <value>
                    <fullName>Other learning difficulties</fullName>
                </value>
                <value>
                    <fullName>Non-verbal communication only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_lung_conditions__c</fullName>
        <label>Other lung conditions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Bronchitis</fullName>
                </value>
                <value>
                    <fullName>Cystic Fibrosis</fullName>
                </value>
                <value>
                    <fullName>Tuberculosis (TB)</fullName>
                </value>
                <value>
                    <fullName>Other lung condition (excluding Asthma)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_non_food_allergies__c</fullName>
        <formula>Medicines__c  + &quot; &quot;+ &quot;//&quot;  +&quot; &quot; +   Non_food_allergy_details__c</formula>
        <label>Other non food allergies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_relationship_to_the_YP__c</fullName>
        <label>Other relationship to the YP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overdue_for_Tetanus_injection__c</fullName>
        <label>Overdue for Tetanus injection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not sure</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PG_Title__c</fullName>
        <label>PG Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Professor</fullName>
                </value>
                <value>
                    <fullName>Lord</fullName>
                </value>
                <value>
                    <fullName>Lady</fullName>
                </value>
                <value>
                    <fullName>Rt. Hon</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Email__c</fullName>
        <label>Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_First_Name__c</fullName>
        <label>Parent First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Last_Name__c</fullName>
        <label>Parent Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_email_alt__c</fullName>
        <label>Parent email alt</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Payment_method_preference__c</fullName>
        <label>Payment method preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay by cheque or postal order</fullName>
                </value>
                <value>
                    <fullName>Pay over the phone</fullName>
                </value>
                <value>
                    <fullName>I Would like to apply for financial support</fullName>
                </value>
                <value>
                    <fullName>I will pay later</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_care_overnight_support__c</fullName>
        <label>Personal care/overnight support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_disability__c</fullName>
        <label>Physical disability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Setting this to true will cause the NCS Data Entry Staging Triggers to refire and attempt to process this staging record for conversion.</description>
        <inlineHelpText>Setting this to true will reattempt to load a staging object that has previously failed.</inlineHelpText>
        <label>Process Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCA_availability_formula__c</fullName>
        <formula>IF( ISPICKVAL( RCA_weekend_availability__c , &quot;Prefer Saturdays.&quot;), &quot;Saturdays&quot;, 
IF( ISPICKVAL(RCA_weekend_availability__c , &quot;Prefer Sundays.&quot;) , &quot;Sundays&quot;, 
IF( ISPICKVAL(RCA_weekend_availability__c , &quot;No preference.&quot;) , &quot;No preference&quot;, 
IF(ISPICKVAL(RCA_weekend_availability__c , &quot;Cannot do Saturdays or Sundays&quot;), &quot;Neither&quot;, &quot;&quot;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCA availability formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCA_weekend_availability__c</fullName>
        <label>RCA weekend availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prefer Saturdays.</fullName>
                </value>
                <value>
                    <fullName>Prefer Sundays.</fullName>
                </value>
                <value>
                    <fullName>No preference.</fullName>
                </value>
                <value>
                    <fullName>Cannot do Saturdays or Sundays</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_Declined__c</fullName>
        <label>NCST:Reason Declined</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Complete__c</fullName>
        <label>NCST:Registration Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Relationship_Type_From_YP_to_PG__c</fullName>
        <formula>$Setup.NCS_Data_Entry_Relationship_Type_Setting__c.Default_From__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type - From (YP to PG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type_To_PG_to_YP__c</fullName>
        <formula>$Setup.NCS_Data_Entry_Relationship_Type_Setting__c.Default_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type - To (PG to YP)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_YP__c</fullName>
        <label>Relationship to the YP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Other responsible adult</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restricted_mobility_wheelchair_user__c</fullName>
        <label>Restricted mobility/wheelchair user</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes and is a wheelchair user</fullName>
                </value>
                <value>
                    <fullName>Yes but is not a wheelchair user</fullName>
                </value>
                <value>
                    <fullName>Yes and uses wheelchair some of the time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Contact_ID__c</fullName>
        <label>NCST:SFDC Contact ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <label>School Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Year 11</fullName>
                </value>
                <value>
                    <fullName>Year 12 (college or sixth form)</fullName>
                </value>
                <value>
                    <fullName>Home schooled</fullName>
                </value>
                <value>
                    <fullName>Not in education</fullName>
                </value>
                <value>
                    <fullName>In year 10 or below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity_of_Asthma__c</fullName>
        <label>Severity of Asthma</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_Heart_Blood_Condition__c</fullName>
        <label>Severity of Heart/Blood Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No impact at all</fullName>
                </value>
                <value>
                    <fullName>Can impact young person</fullName>
                </value>
                <value>
                    <fullName>Impacts on a daily basis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_Non_food_allergy__c</fullName>
        <label>Severity of Non-food allergy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_dyslexia_Dyspraxia__c</fullName>
        <label>Severity of dyslexia/Dyspraxia</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_food_allergy__c</fullName>
        <label>Severity of food allergy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_hearing_impairment__c</fullName>
        <label>Severity of hearing impairment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Profound</fullName>
                </value>
                <value>
                    <fullName>Severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity_of_visual_impairment__c</fullName>
        <label>Severity of visual impairment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mild visual impairment</fullName>
                </value>
                <value>
                    <fullName>Partially sighted</fullName>
                </value>
                <value>
                    <fullName>Registered blind</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sickle_cell_status__c</fullName>
        <label>Sickle cell status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sickle cell anaemia</fullName>
                </value>
                <value>
                    <fullName>Sickle cell trait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_Choice_Art__c</fullName>
        <label>Skill Choice: Art</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>[None selected]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_choice_Drama__c</fullName>
        <label>Skill choice: Drama</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>[None selected]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_choice_Enterprise__c</fullName>
        <label>Skill choice: Enterprise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>[None selected]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_choice_Media__c</fullName>
        <label>Skill choice: Media</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>[None selected]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_choice_Music__c</fullName>
        <label>Skill choice: Music</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>[None selected]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_choice_Photography__c</fullName>
        <label>Skill choice: Photography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>[None selected]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_choice_Sport__c</fullName>
        <label>Skill choice: Sport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>[None selected]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skills_Option_1_formula__c</fullName>
        <formula>IF(Multiple_First_Priority__c &gt;1, &quot;Multiple first priority choices&quot;, 
IF(ISPICKVAL( Skill_choice_Drama__c , &quot;1&quot;) , &quot;Drama&quot;, 
IF(ISPICKVAL( Skill_choice_Enterprise__c , &quot;1&quot;) , &quot;Enterprise&quot;, 
IF(ISPICKVAL( Skill_choice_Media__c , &quot;1&quot;) , &quot;Media&quot;, 
IF(ISPICKVAL( Skill_choice_Music__c , &quot;1&quot;) , &quot;Music&quot;, 
IF(ISPICKVAL( Skill_choice_Photography__c , &quot;1&quot;) , &quot;Photography&quot;,
IF(ISPICKVAL( Skill_choice_Sport__c , &quot;1&quot;) , &quot;Sport&quot;,
IF(ISPICKVAL(  Skill_Choice_Art__c  , &quot;1&quot;) , &quot;Art&quot;,
 &quot;[None selected]&quot; ))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skills Option 1 formula</label>
        <type>Text</type>
    </fields>
</CustomObject>